--- a/db-coffeetime/pom.xml
+++ b/db-coffeetime/pom.xml
@@ -68,8 +68,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.xmlunit</groupId>
+			<artifactId>xmlunit-core</artifactId>
+		</dependency>
 
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>1.3.1.Final</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
@@ -88,7 +97,7 @@
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<version>1.3.1.Final</version>
+							<version>1.4.1.Final</version>
 						</path>
 						<path>
 							<groupId>org.projectlombok</groupId>
@@ -100,5 +109,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
