--- a/db-coffeetime/src/main/resources/config/application.yml
+++ b/db-coffeetime/src/main/resources/config/application.yml
@@ -10,20 +10,26 @@ spring:
   liquibase:
     change-log: classpath:/config/liquibase/master.xml
   mail:
-    host: smtp_gmail.com
-    port: 587
-    username: matheus1995@gmail.com
-    password:
-      properties:
-        email:
-          smtp:
-            auth: true
-            starttls:
-              enable: true
-              required: true
-            quitwait: false
+    host: smtp.gmail.com
+    port: 465
+    username: mhateus1995@gmail.com
+    password: "226643302"
+    properties:
+      mail:
+        stmp:
+          ssl:
+            enabled: true
+          socketFactory:
+            port: 465
+            fallback: false
+            class: javax.net.ssl.SSLSocketFactory
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          quitwait: false
 
-  aplication:
-    email:
-      endereco-remetente: mhateus1995@gmail.com
-      nome-remetente:
+application:
+  email:
+    endereco-remetente:
+    nome-remetente: CoffeeTime
